--- a/parlay/index/migrations/templates/par/name.html
+++ b/parlay/index/migrations/templates/par/name.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Naem</title>
-</head>
-<body>
-    <form action="/your-name/" method="post">
+{% extends 'par/base.html' %}
+
+{% block content %}
+    <form action="/register/" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit" />
     </form>
-</body>
-</html>
+
+{% endblock %}
