Some minor adds

--- a/parlay/index/migrations/templates/par/index.html
+++ b/parlay/index/migrations/templates/par/index.html
@@ -18,60 +18,13 @@
 
                 {% endfor %}
 
-            </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <form action="/your-name/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
+        </div>
+            <p> {{user.username}}</p>
+            <hr>
+            <p> {{user.email}}</p>
+            <hr>
+            <p> {{user.token.tokens}} tokens</p>
+            <hr>
+
 </form>
 {% endblock %}
