--- a/parlay/index/migrations/templates/par/base.html
+++ b/parlay/index/migrations/templates/par/base.html
@@ -17,12 +17,7 @@
 
     <header>
         <div class="row container-fluid mx-auto">
-            <div class = "col-6 d-none d-md-block">
-                <a href = '{% url 'login' %}'>LOGIN</a>
-            </div>
-            <div class = "col d-block d-md-none">
-                smal sech
-            </div>
+
             <a href = "{% url 'index' %}">
             <div class = "col">
                 home
@@ -30,22 +25,26 @@
             </div>
             </a>
 
-            <div class = "col d-none d-lg-block">
-                <a href = "{% url 'signup' %}">Register</a>
 
-            </div>
-            <div class = "col d-none d-lg-block profile">
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                <img src = "{% static 'img/logo.png' %}" id = "profile-pic">
-                <h5>
-                  Zyymer <br>
-                  <small class="text-muted">Tokens: 322</small>
-                </h5>
 
-            </div>
-            <div class = "col d-block d-lg-none">
-                mob - profl
-            </div>
+            {% if user.get_username == none %}
+
+                <div class = "col-6 d-none d-md-block">
+                    <a href = '{% url "login" %}'>LOGIN</a>
+                </div>
+                <div class = "col d-none d-lg-block">
+                    <a href = "{% url 'signup' %}">Register</a>
+
+                </div>
+            {% else %}
+                <div class = "col d-none d-lg-block profile">
+                    <p> {{user.username}}</p>
+                    <p> {{user.token_amount}}</p>
+                </div>
+                <div class = "col d-block ">
+                    <a href = '{% url "logout" %}'> Log out</a>
+                </div>
+            {% endif %}
         </div>
     </header>
     <div id="container" class = "container-fluid">
