--- a/parlay/index/migrations/templates/par/base.html
+++ b/parlay/index/migrations/templates/par/base.html
@@ -10,43 +10,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-
-    <header>
-        <div class="row container-fluid mx-auto">
-
-            <a href = "{% url 'index' %}">
-            <div class = "col">
-                home
-
-            </div>
-            </a>
-
-
-
-            {% if user.get_username == none or not user.is_authenticated %}
-
-                <div class = "col-6 d-none d-md-block">
-                    <a href = '{% url "login" %}'>LOGIN</a>
-                </div>
-                <div class = "col d-none d-lg-block">
-                    <a href = "{% url 'signup' %}">Register</a>
-
-                </div>
-            {% else %}
-                <div class = "col d-none d-lg-block profile">
-                    <a href="{% url 'profile' user.id %}"> {{user.username}}</a>
-                    <p> </p>
-                </div>
-                <div class = "col d-block ">
-                    <a href = '{% url "logout" %}'> Log out</a>
-                </div>
-            {% endif %}
+    <nav class="navbar navbar-default navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="{% url 'index' %}">Parlay</a>
         </div>
-    </header>
+          {% if user.get_username == none or not user.is_authenticated %}
+
+          <p><a href = '{% url "login" %}'>Log in</a> or <a href = "{% url 'signup' %}">Register</a> </p>
+          {% else %}
+
+              <p>Hi, <a href="{% url 'profile' user.id %}"> {{user.username}}</a><br> <a href = '{% url "logout" %}'> Log out</a></p>
+          {% endif %}
+
+      </div>
+    </nav>
+
 
     <div id="container" class = "container-fluid">
     {% block content %}
