--- a/parlay/index/migrations/templates/par/profile.html
+++ b/parlay/index/migrations/templates/par/profile.html
@@ -1,9 +1,20 @@
 {% extends 'par/base.html' %}
+{% load static %}
 {% block title %} {{user.username}}'s profile {% endblock %}
 {% block content %}
-    <H1>{{ user.username }}</H1>
-    <p> {{ user.email }}</p>
-    <p> {{user.bio}}</p>
+    <br>
+<div class = 'col container-fluid'>
+    <H1 id = "username">{{ username.username }}</H1>
+    {% if user.id == username.id %}
+        <h3> {{username.profile.tokens}} <small> tokens </small></h3>
+        <a class="btn btn-primary" href="{% url 'edit-profile' user_id=user.id %}">  <i class="fas fa-pencil-alt"></i>  Edit profile </a>
+    {% else %}
+
+    {% endif %}
+</div>
+
+    <hr>
+    <h5> {{username.profile.bio}}</h5>
 
 
 {% endblock %}
