--- a/parlay/index/migrations/templates/par/detail.html
+++ b/parlay/index/migrations/templates/par/detail.html
@@ -5,8 +5,31 @@
 
 
         <br>
-        <h1> {{book.title}} </h1>
-        <h3> {{book.author}} </h3>
-        <p> {{book.description}}</p>
+        <div class ="row container-fluid">
+                <div class="col-10">
+                        <h1> {{book.title}} </h1>
+                </div>
+                <div class="col-2">
+                        {% if user.is_authenticated %}
+
+                                <a class="btn btn-primary" href="{% url 'add-book' book_id=book.id  %}">  Add book </a>
+                        {% endif %}
+                </div>
+        </div>
+        <div class="row container-fluid">
+                <div class = "col-12">
+                      <h3> {{book.author}} </h3>
+                </div>
+
+        </div>
+        <div class="row container-fluid">
+                <div class = "col-12">
+                      <p class="description_text"> {{book.description}}</p>
+                </div>
+
+        </div>
+
+
+
 
 {% endblock %}
