--- a/parlay/index/migrations/templates/par/login.html
+++ b/parlay/index/migrations/templates/par/login.html
@@ -1,5 +1,5 @@
 {% extends 'par/base.html' %}
-{% load static %}
+{% load staticfiles %}
 {% block title %} Login {% endblock %}
 
 {% block content %}
