--- a/parlay/index/migrations/templates/par/signup.html
+++ b/parlay/index/migrations/templates/par/signup.html
@@ -20,6 +20,7 @@
 
             box-shadow: 0 0 100px 15px #888;
             }
+
   </style>
   <form method="post">
 
@@ -37,7 +38,7 @@
             {% endfor %}
         {% endfor %}
          <br>
-         <button type="submit" class="btn btn-primary">Sign up</button>
+         <button type="submit" class="btn btn-primary">Sign up <i class="fas fa-arrow-right"></i></button>
     </div>
   </form>
 
