--- a/parlay/index/migrations/static/css/style.css
+++ b/parlay/index/migrations/static/css/style.css
@@ -5,6 +5,36 @@ body{
     width:100%;
 
 }
+.navbar-header{
+    color: #000;
+}
+input[type=text], input[type=email], input[type=password]{
+                width:75%;
+                max-width: 250px;
+                border: 1px solid #888;
+                border-radius: 25px;
+
+                padding-left: 1%;
+                padding-right:1%;
+            }
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus{
+                box-shadow: 0 0 20px 8px #ccf;
+                transition: all 0.25s ease;
+                border-radius: 25px;
+                 outline: none;
+}
+select {
+    width:100%;
+    max-width: 750px;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+.select-group label{
+    font-size: 1.5em;
+    text-align:center;
+}
 .navigation{
     background-color: #eee;
     display:flex;
@@ -23,7 +53,7 @@ body{
     width:45%;
 
 }
-#test_cont{
+.test_cont{
     border:  1px solid #888;
     box-shadow: 0 0 3px 1px #aaa;
     margin:0;
