--- a/parlay/index/migrations/templates/par/edit_profile.html
+++ b/parlay/index/migrations/templates/par/edit_profile.html
@@ -5,10 +5,11 @@
 
 {% block content %}
 <br>
-    <div class="container-fluid d-flex justify-content-center">
+    <div class="container-fluid">
         <form method="POST" class="post-form form-group">{% csrf_token %}
-           {{ form.as_p }}
-           <button type="submit" class="save btn btn-outline-primary btn-block">Save</button>
+            <textarea type="text"  name="{{ form.bio.name }}" value="{{ form.bio.value }}" class = "form-control" rows="10">{{ user.profile.bio}}</textarea>
+            <br>
+            <button type="submit" class="save btn btn-outline-primary btn-block">Save</button>
        </form>
     </div>
 
