--- a/parlay/index/migrations/templates/par/add_wager.html
+++ b/parlay/index/migrations/templates/par/add_wager.html
@@ -13,7 +13,7 @@
             {{ field }}
             {% endfor %}
             <br>
-        <button type = "submit" class = "save btn btn-outline-primary">Submit</button>
+        <button type = "submit" class = "save button btn btn-block bg-teal white">Submit <i class="fas fa-arrow-right"></i></button>
 
         </div>
 
