--- a/parlay/index/migrations/templates/par/base.html
+++ b/parlay/index/migrations/templates/par/base.html
@@ -10,11 +10,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <title>{% block title %} {% endblock %}</title>
 </head>
-<body>
-    <nav class="navbar navbar-default navigation">
+<body class="bg-silver">
+    <nav class="navbar navbar-default navigation bg-maroon silver">
       <div class="container-fluid">
         <div class="navbar-header col-8 nav-link">
           <a class="navbar-brand " href="{% url 'index' %}">Parlay</a>
