--- a/parlay/index/migrations/templates/par/detail.html
+++ b/parlay/index/migrations/templates/par/detail.html
@@ -6,7 +6,7 @@
 
         <br>
         <div class ="row container-fluid">
-                <div class="col-12 col-md-10 ">
+                <div class="col-12 col-md-10 d-flex align-items-center justify-content-center">
                         <h1> {{book.title}} </h1>
                 </div>
 
@@ -22,6 +22,7 @@
                         {% endif %}
                 </div>
         </div>
+        <br>
         <div class="row container-fluid">
                 <div class = "col-12">
                       <p class="description_text"> {{book.description}}</p>
