--- a/parlay/index/migrations/templates/par/login.html
+++ b/parlay/index/migrations/templates/par/login.html
@@ -7,18 +7,21 @@
   <h2 align="center">Login</h2>
     <style> .navigation{ display:none;}
             body{ background:url('{% static 'img/memphis-colorful.png' %}') repeat;
+            display : flex;
+            align-items: center;
+
 
             }
             #container {background-color: #eee;
             position: absolute;
-            top: 31%;
-            height:;
+            top: 25%;
+            height:50%;
             width:100%;
             left:0;
             padding-top: 3%;
             padding-bottom:3%;
 
-            box-shadow: 0 0 100px 15px #888;
+            box-shadow: 0 0 100px 20px #888;
             }
   </style>
   <form method="post">
